# yankit

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/yankit/: __init__.py  cli.py  clipboard.py  config.py  db.py  display.py  watcher.py
src/yankit/tui/: __init__.py  app.py  components.py  screens.py
